# rsync

./: .gitignore  Makefile.am  Makefile.in  authenticate.c  batch.c  cleanup.c  clientserver.c  configure.ac  configure.in  flist.c  fork.c  global.h  io.c  log.c  main.c  mingw.c  mingw.h  mkglobal.awk  pipe.c  prepare-source.mak  progress.c  rsync.h  socket.c  syscall.c  token.c  uidlist.c  util.c  xattrs.c
lib/: .gitignore  Makefile.am  Makefile.in  compat.c  errno.h  fcntl.h  getaddrinfo.c  getnameinfo.c  math.h  netdb.h  signal.h  stdio.h  stdlib.h  string.h  termios.h  unistd.h  wchar.h
lib/arpa/: inet.h
lib/netinet/: in.h
lib/sys/: file.h  select.h  socket.h  stat.h  time.h  uio.h
m4/: .gitignore  gnulib-cache.m4  gnulib-comp.m4
mingw/: mingw.c  mingw.h
popt/: system.h
snippet/: .gitignore
